# registry

./: Cargo.toml  TECHNICAL_README.md
src/: registry.rs
test_helper/: Cargo.toml
test_helper/src/: helper.rs
tests/: registry.rs  registry_manifest_templates.rs
transaction-manifest/: instantiate.rtm
