[workspace]
members = [
    "test_helper"
]

[package]
name = "registry"
version = "1.0.0"
edition = "2021"

[net]
git-fetch-with-cli = true

[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
common = { git = "https://github.com/ociswap/pools-common" }

[dev-dependencies]
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.1" }
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.7.0-alpha.5" }
registry_test_helper = { path = "test_helper" }
pretty_assertions = "1.3.0"
test-case = "3"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
