[package]
name = "registry"
version = "1.1.7"
edition = "2021"

[dependencies]
sbor = "1.3.0"
scrypto = "1.3.0"
common = { git = "https://github.com/ociswap/pools-common", tag = "v1.2.4" }

[dev-dependencies]
scrypto-test = "1.3.0"
scrypto_testenv = { git = "https://github.com/ociswap/scrypto-testenv", tag = "v0.8.0" }
registry_test_helper = { path = "test_helper" }
pretty_assertions = "1.3.0"
test-case = "3"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 'z'
lto = false
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true
